fix: fix cors settings